<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"/>

    <EditText
        android:id="@+id/editTextTaskDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fechaHora"/>

    <CheckBox
        android:id="@+id/checkBoxCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completada"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"/>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar"/>
</LinearLayout>
